--- a/i18n/plugins/org.talend.core.runtime.nl/src/main/java/org/talend/core/runtime/i18n/messages_fr.properties
+++ b/i18n/plugins/org.talend.core.runtime.nl/src/main/java/org/talend/core/runtime/i18n/messages_fr.properties
@@ -32,6 +32,7 @@ ContextComposite.tableValue=Table des valeurs
 ContextComposite.treeValue=Arbre des valeurs
 ContextComposite.variable=Variables
 ContextParameterProposal.ContextVariable=\n\nVariable de context.
+ContextParameterProposal.Description=Description : {0}
 ContextValueErrorChecker.ErrorTitile=Erreur de la valeur de contexte :
 ContextParameterProposal.NoCommentAvaiable=pas de commentaire disponible.
 ContextParameterProposal.Type=\nType\: {1}
@@ -161,6 +162,7 @@ FunctionManager.PurePerl.ParaName=Param\u00E8tre personnalis\u00E9
 GlobalServiceRegister.ServiceNotRegistered=Le service {0} n'a pas \u00E9t\u00E9 enregistr\u00E9.
 GroupByContextAction.groupContext=Grouper par contexte
 GroupByVariableAction.groupVariable=Grouper par variable
+JavaGlobalVariableProposal.Description=Description : {0}
 JavaSimpleDateFormatProposalProvider.displaySingleQuote=\ ' : afficher un guillemet simple
 JavaSimpleDateFormatProposalProvider.quoteDisplayError=Deux apostrophes affichent uniquement une seule apostrophe
 JavaTypesManager.bigDecimal=BIGDECIMAL est un nombre :
@@ -215,6 +217,7 @@ MetadataTool.schemaIn=Le nom du sch\u00E9ma est invalide.
 MetadataTool.schemaInvalid=Nom de sch\u00E9ma invalide.
 MetadataTool.schemaNull=Le nom du sch\u00E9ma est null.
 NodeReturnProposal.Availability=\nDisponibilit\u00E9\: {4}
+NodeReturnProposal.Description=Description : {0}
 NodeReturnProposal.GlobalVariable=\n\nVariable globale, propri\u00E9t\u00E9 du composant {1} [{2}].
 NodeReturnProposal.Type=\nType\: {3}
 NodeReturnProposal.VariableName=\n\nNom de la variable\: {5}
@@ -228,6 +231,7 @@ Parameter.Value=\ valeur \:
 PatternCalendar.dateFormat="aaaa-MM-jj HH:mm:ss"
 PatternCalendar.example=Exemple :
 PatternCalendar.pattern=Mod\u00E8le :
+PerlGlobalVariableProposal.Description=Description : {0}
 PerspectiveMenuManager.dummy=Factice
 PerspectiveMenuManager.perspectiveLabel=&Perspective
 ProcessorUtilities.generatingJob=G\u00E9n\u00E9ration du job en cours...
