--- a/i18n/plugins/org.talend.metadata.managment.ui.nl/src/main/java/messages_fr.properties
+++ b/i18n/plugins/org.talend.metadata.managment.ui.nl/src/main/java/messages_fr.properties
@@ -33,7 +33,7 @@ ContextSetsSelectionDialog.Title=Choisir le contexte
 CommonWizard.cancel=Annuler
 CommonWizard.exception=Exception
 CommonWizard.nameAlreadyExist=Ce nom existe d\u00E9j\u00E0
-CommonWizard.persistenceException=Echec de l'acc\u00E8s aux donn\u00E9es{0}\n
+CommonWizard.persistenceException=\u00C9chec de l'acc\u00E8s aux donn\u00E9es{0}\n
 ContextWizard.Title=Cr\u00E9er / Editer un groupe de contextes
 ContextWizard.contextPageDescription=D\u00E9finir les contextes, les variables et les valeurs
 ContextWizard.contextPageTitle=Etape 2 sur 2
@@ -354,7 +354,7 @@ SalesforceForm.checkIsDone=Connexion \u00E9tablie.
 SalesforceModuleParseAPI.URLInvalid=L'URL est invalide.
 SalesforceModuleParseAPI.lostUsernameOrPass=Identifiant ou mot de passe perdu
 SalesforceSchemaWizard.windowTitleCreate=Nouvelle connexion Salesforce
-SalesforceSchemaWizard.windowTitleUpdate=Editer une connexion Salesforce existante
+SalesforceSchemaWizard.windowTitleUpdate=Modifier un sch\u00E9ma Salesforce existant
 SalesforceStep1Form.account=Compte
 SalesforceStep1Form.checkLogin=V\u00E9rifier la connexion
 SalesforceStep1Form.connection=R\u00E9cup\u00E9rer les modules standards et personnalis\u00E9s...
@@ -534,3 +534,4 @@ SparkPropertiesDialog.desc=Configurations des propri\u00E9t\u00E9s Spark
 SparkPropertiesDialog.parentProperties.title=Propri\u00E9t\u00E9s Spark parent
 DatabaseForm.DataBase=Base de donn\u00E9es
 FileStep2.stop=Arr\u00EAter
+PropertiesWizard.PreviousVersion=Les TestCases de {0} vont pointer vers la version pr\u00E9c\u00E9dente. Utilisez \"Modifier les propri\u00E9t\u00E9s du TestCase\" pour modifier la version parente.
