--- a/i18n/plugins/org.talend.metadata.managment.ui.nl/src/main/java/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.metadata.managment.ui.nl/src/main/java/messages_zh_CN.properties
@@ -545,4 +545,4 @@ SparkPropertiesDialog.parentProperties.title=\u7236\u7EA7Spark\u5C5E\u6027
 DatabaseForm.DataBase=DataBase
 FileStep2.stop=\u505C\u6B62
 PropertiesWizard.VersionTitle=\u66F4\u6539\u7236\u7248\u672C
-PropertiesWizard.PreviousVersion={0} \u7684 TestCase \u5C06\u6307\u5411\u4E0A\u4E00\u7248\u672C\uFF0C\u8BF7\u4F7F\u7528 \"\u7F16\u8F91 TestCase \u5C5E\u6027\" \u6765\u66F4\u6539\u7236\u7248\u672C\u3002
+PropertiesWizard.PreviousVersion={0} \u7684 TestCase \u5C06\u6307\u5411\u4E0A\u4E00\u7248\u672C\u3002\u8BF7\u4F7F\u7528 \"\u7F16\u8F91 TestCase \u5C5E\u6027\" \u6765\u66F4\u6539\u7236\u7248\u672C\u3002
