--- a/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_fr.properties
+++ b/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_fr.properties
@@ -190,6 +190,7 @@ MetadataTool.schemaIn=Le nom du sch\u00E9ma est invalide.
 MetadataTool.schemaInvalid=Nom de sch\u00E9ma invalide.
 MetadataTool.schemaNull=Le nom du sch\u00E9ma est null.
 NodeReturnProposal.Availability=\nDisponibilit\u00E9\: {4}
+NodeReturnProposal.Description=Description : {0}
 NodeReturnProposal.GlobalVariable=\n\nVariable globale, propri\u00E9t\u00E9 du composant {1} [{2}].
 NodeReturnProposal.Type=\nType\: {3}
 NodeReturnProposal.VariableName=\n\nNom de la variable\: {5}
@@ -204,6 +205,7 @@ PatternCalendar.dateFormat="aaaa-MM-jj HH:mm:ss"
 PatternCalendar.example=Exemple :
 PatternCalendar.pattern=Mod\u00E8le :
 PerlDynamicProposalUtil.autoConvert=\ sera automatiquement converti en {0}->[index] dans le code g\u00E9n\u00E9r\u00E9
+PerlGlobalVariableProposal.Description=Description : {0}
 PerlGlobalVariableProposal.VariableName=\n\nNom de la variable\: {1}
 PerspectiveMenuManager.dummy=Factice
 PerspectiveMenuManager.perspectiveLabel=&Perspective
@@ -478,7 +480,7 @@ TalendDataCollectorUploadingPreferencePage_UploadPeriod=P\u00E9riode de chargeme
 TalendDataCollectorUploadingPreferencePage_Days=Jours
 repository.servicesOperation=Op\u00E9ration
 repository.servicesPort=Port
-RepositoryUpdateManager.MessagesForTDQ=Propager les modifications \u00E0 tous les Jobs ? \nCertaines d\u00E9pendances d'analyses vont perdre des informations.\nCela peut prendre un moment.
+RepositoryUpdateManager.MessagesForTDQ=Voulez-vous propager les modifications \u00E0 tous les Jobs\u00A0?\nCertaines d\u00E9pendances d'analyses vont perdre des informations.\nCela peut prendre un moment.
 EComponentCategory.executeJob=Ex\u00E9cuter le Job
 EComponentCategory.monitoring=Monitoring
 BinRepositoryNode.label=Corbeille
@@ -538,3 +540,5 @@ CorePreferencePage.alwaysAskAtStartup=Toujours afficher la fen\u00EAtre des proj
 EComponentCategory_advanceSetting=Param\u00E8tres avanc\u00E9s
 I18nPreferencePage.needRestart=Langage local (red\u00E9marrage requis)
 I18nPreferencePage.restart=Red\u00E9marrer
+I18nPreferencePage.wait_process=Le processus va prendre plusieurs minutes, patientez...
+MetadataPreferencePage.MessageDialog.Restart=Le Studio doit red\u00E9marrer pour que ce param\u00E8tre soit pris en compte.\\n\u00CAtes-vous s\u00FBr(e)\u00A0?
