--- a/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_ja.properties
+++ b/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_ja.properties
@@ -581,6 +581,6 @@ I18nPreferencePage.importBabili=Babili\u304B\u3089\u7FFB\u8A33\u306E\u30A4\u30F3
 I18nPreferencePage.restart=\u518D\u8D77\u52D5
 I18nPreferencePage.restartButton=\u6709\u52B9\u5316\u306B\u306F\u518D\u8D77\u52D5\u304C\u5FC5\u8981\u3067\u3059\u3002
 I18nPreferencePage.restoreDefault=\u30C7\u30D5\u30A9\u30EB\u30C8\u3092\u5FA9\u5143
-I18nPreferencePage.wait_process=\u5B9F\u884C\u4E2D\u3067\u3059\u3002\u3057\u3070\u3089\u304F\u304A\u5F85\u3061\u4E0B\u3055\u3044...
+I18nPreferencePage.wait_process=\u3053\u306E\u51E6\u7406\u306B\u306F\u6570\u5206\u304B\u304B\u308A\u307E\u3059\u3002\u3057\u3070\u3089\u304F\u304A\u5F85\u3061\u304F\u3060\u3055\u3044...
 MetadataPreferencePage.EnableBasic.name=\u57FA\u672C\u8A8D\u8A3C\u30D8\u30C3\u30C0\u30FC\u3092\u6709\u52B9\u306B\u3059\u308B
-MetadataPreferencePage.MessageDialog.Restart=\u3053\u306E\u8A2D\u5B9A\u3092\u9069\u7528\u3059\u308B\u305F\u3081\u306BStudio\u3092\u518D\u8D77\u52D5\u3057\u307E\u3059\u3002\\n\u3088\u308D\u3057\u3044\u3067\u3059\u304B?
+MetadataPreferencePage.MessageDialog.Restart=\u3053\u306E\u8A2D\u5B9A\u304C\u6709\u52B9\u306B\u306A\u308B\u3088\u3046\u3001Studio\u3092\u518D\u8D77\u52D5\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002\\n\u3088\u308D\u3057\u3044\u3067\u3059\u304B?
