--- a/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_zh_CN.properties
@@ -583,4 +583,4 @@ I18nPreferencePage.restartButton=\u91CD\u542F\u540E\u751F\u6548\u3002
 I18nPreferencePage.restoreDefault=\u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E
 I18nPreferencePage.wait_process=\u8FD9\u4E2A\u8FC7\u7A0B\u5C06\u6301\u7EED\u51E0\u5206\u949F\u65F6\u95F4\uFF0C\u8BF7\u7A0D\u5019...
 MetadataPreferencePage.EnableBasic.name=\u542F\u7528\u57FA\u672C\u8EAB\u4EFD\u9A8C\u8BC1\u6807\u5934
-MetadataPreferencePage.MessageDialog.Restart=\u5C06\u91CD\u65B0\u542F\u52A8 studio \u4EE5\u5E94\u7528\u6B64\u8BBE\u7F6E\u3002\\n\u662F\u5426\u786E\u5B9A\uFF1F
+MetadataPreferencePage.MessageDialog.Restart=\u6B64\u8BBE\u7F6E\u5C06\u5728 Studio \u91CD\u542F\u540E\u751F\u6548\u3002\\n\u662F\u5426\u786E\u5B9A\u91CD\u542F\uFF1F
