--- a/i18n/plugins/org.talend.common.ui.runtime.nl/src/main/java/org/talend/commons/ui/runtime/i18n/messages_fr.properties
+++ b/i18n/plugins/org.talend.common.ui.runtime.nl/src/main/java/org/talend/commons/ui/runtime/i18n/messages_fr.properties
@@ -14,7 +14,7 @@ ContentProposalAdapterExtended.closeFocusout=Fermeture de focusout
 ControlUtils.Unsupported1=Ce contr\u00F4le ({0}) n'est pas support\u00E9, ajouter un "sinon" si vous voulez...
 CopyPushButton.CopyButton.Tip=Copie les \u00E9l\u00E9ments s\u00E9lectionn\u00E9s
 Curve2D.MaxNum.Be0=maximumSegments doit \u00EAtre positif ou 0
-Curve2D.MinNum.Be0=minimumSegements doit \u00EAtre positif ou 0
+Curve2D.MinNum.Be0=minimumSegments doit \u00EAtre positif ou 0
 DateDialog.textContent=S\u00E9lectionner Date et heure
 DefaultCellModifier.tableItemDispose=TableItem effac\u00E9
 DialogErrorForCellEditorListener.Error.MsgDialogTitle=ERROR
