--- a/i18n/plugins/org.talend.librariesmanager.nl/src/main/java/messages_en.properties
+++ b/i18n/plugins/org.talend.librariesmanager.nl/src/main/java/messages_en.properties
@@ -25,3 +25,4 @@ ShareLibsJob.sharingLibraries=Sharing libraries : {0}
 ExtensionModuleManager.moduleGroup.cycleReference=Module group {0} was cycle referenced!
 NexusRepository.checkConnection.successMsg=Connection successful.
 NexusRepository.checkConnection.invalidParam=Invalid Nexus Parameter.
+ShareLibsJob.monitor.cancelled=User cancelled.
