Fix TUP-26190 Can't setup jar from JDBC wizard (#3107)
* Fix TUP-26190 Can't setup jar from JDBC wizard
https://jira.talendforge.org/browse/TUP-26190

* Fix TUP-26190 Can't setup jar from JDBC wizard
https://jira.talendforge.org/browse/TUP-26190

--- a/main/plugins/org.talend.librariesmanager.ui/src/main/java/messages.properties
+++ b/main/plugins/org.talend.librariesmanager.ui/src/main/java/messages.properties
@@ -109,6 +109,7 @@ InstallModuleDialog.detectButton.text=Detect the module install status
 InstallModuleDialog.warning=Caution: Changing the maven URI will affect all the components and plugins that with default maven URI '{0}' within the whole project.
 InstallModuleDialog.copyURIBtn=Copy default MVN URI.
 InstallModuleDialog.error.findbyURI=The maven URI is not valid, please input a valid URI!
+InstallModuleDialog.error.invalidDefaultMvnURI=Can't generate default MVN URI.
 
 ConfigModuleDialog.text=Module
 ConfigModuleDialog.message=Select a module : {0}
