--- a/main/plugins/org.talend.rcp/src/main/java/messages.properties
+++ b/main/plugins/org.talend.rcp/src/main/java/messages.properties
@@ -122,3 +122,4 @@ DataTransferMessages.ArchiveExport_selectDestinationTitle=Export to Archive File
 WorkbenchMessages.ShowView_errorTitle=Problems Showing View
 ComponentsManager.form.install.dialog.restart.title=Restarting Studio
 ComponentsManager.form.install.dialog.restart.message=We need to restart studio to finish the installation.\n\nDo you want to restart studio right now?
+JavaVersion.CheckError=Java upgrade required, minimal required java version is {0}, current version is {1}.
