fix(TUP-26329)impala metadata not in sync with the impala component (#3118)
* fix(TUP-26329)impala metadata not in sync with the impala component

* fix(TUP-26329)impala metadata not in sync with the impala component

* fix(TUP-26329)impala metadata not in sync with the impala component

--- a/main/plugins/org.talend.repository.metadata/src/main/java/org/talend/repository/metadata/i18n/messages.properties
+++ b/main/plugins/org.talend.repository.metadata/src/main/java/org/talend/repository/metadata/i18n/messages.properties
@@ -850,6 +850,8 @@ DatabaseForm.hbase.distributionAlert=Distribution must be specified
 DatabaseForm.impala.distributionAlert=Distribution must be specified
 DatabaseForm.hbase.versionAlert=HBase version must be specified
 DatabaseForm.impala.versionAlert=Impala version must be specified
+DatabaseForm.impala.driverVersion=Impala Driver
+DatabaseForm.impala.driverVersion.tip=Select a hive impala driver
 DatabaseForm.maprdb.settings=Version
 DatabaseForm.maprdb.distribution=Distribution
 DatabaseForm.maprdb.distribution.tooltip=Set the hadoop distribution
