--- a/main/plugins/org.talend.librariesmanager/src/main/java/messages.properties
+++ b/main/plugins/org.talend.librariesmanager/src/main/java/messages.properties
@@ -26,5 +26,6 @@ ModulesNeededProvider.Module.Exception=Needed module list do not contains this m
 
 ShareLibsJob.message=Share libraries from maven to {0} server
 ShareLibsJob.sharingLibraries=Sharing libraries : {0}
+ShareLibsJob.monitor.cancelled=User cancelled.
 
 ExtensionModuleManager.moduleGroup.cycleReference=Module group {0} was cycle referenced!
